--- a/U5_Manejo_de_Archivos_y_Puertos/5.2_Archivos/html/Rel_Tema_PPTX.html
+++ b/U5_Manejo_de_Archivos_y_Puertos/5.2_Archivos/html/Rel_Tema_PPTX.html
@@ -27,7 +27,7 @@
 <H2><A NAME=III.F>III.F 10_U03_III.F_Distribucion_de_Poisson.pptx</A></H2><BR><BR><BR><BR>
 <H2>IV. DISTRIBUCIONES CONTINUAS</H2>
 <H2><A NAME=IV.A>IV.A 11_U04_IV.A_Distribucion_Uniforme.pptx</A></H2><BR><BR><BR><BR>
-<H2><A NAME=IV.B>IV.B</A></H2><BR><BR><BR><BR>
+<H2><A NAME=IV.B>IV.B 12_U04_IV.B_Distribucion_Exponencial.pptx</A></H2><BR><BR><BR><BR>
 <H2>V. DISTRIBUCI&Oacute;N NORMAL</H2>
 <H2><A NAME=V.A>V.A</A></H2><BR><BR><BR><BR>
 <H2><A NAME=V.B>V.B</A></H2><BR><BR><BR><BR>
